# ZoenWorld

./: Dockerfile  docker-compose.yml  package-lock.json  pyproject.toml  start.py
app/: config.py  database.py  entity.py  main.py  models.py  schemas.py  world.py
app/services/: configuracion.py  entidad.py  logs.py  mundo.py
static/: index.html  script.js  styles.css
