[tool.poetry]
name = "zoenia-world"
version = "0.1.0"
description = "Servidor de mundo persistente con entidades evolutivas"
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
tensorflow = "^2.6.0"
numpy = "^1.21.2"
websockets = "^10.0"
uvicorn = "^0.15.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"